fix: material icon not vertical aligned correctly

--- a/Modules/Admin/Resources/css/app.css
+++ b/Modules/Admin/Resources/css/app.css
@@ -21,6 +21,11 @@
     display: block !important;
 }
 
+.mdi {
+    font-size: 18px;
+    vertical-align: inherit;
+}
+
 .filter-select .ant-select-selector {
     @apply shadow-md;
 }
